--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "aws4-axios": "^2.4.9",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-request-id": "^3.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "eslint": "^8.22.0",
